Fixed message text overflow

--- a/emailclient-tutorial/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/emailclient-tutorial/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -56,10 +56,14 @@ $v-border-radius: 10px;
         border-bottom: 1px solid #ccc;
     }
 
-    .message {
-        overflow: hidden;
+    .message-layout {
         .message-sender {
-            white-space: nowrap; 
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
+        .message {
+            overflow: hidden;
         }
     }
 }
